[package]
authors = ["Euan Rochester <euan@rochester.me.uk>"]
name = "modpack_tool"
version = "0.1.0"

[dependencies]
chrono = "0.4.2"
clap = "2.24"
env_logger = "0.5"
failure = "0.1.1"
failure_derive = "0.1.1"
futures-await = "0.1.1"
html5ever = "0.22.0"
http = "0.1.5"
hyper = "0.12.16"
hyper-tls = "0.3.1"
kuchiki = "0.7"
lazy_static = "1.0"
log = "*"
regex = "0.2.2"
selectors = "0.20.0"
sentry = "0.12.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha1 = "*"
slog-json = "2"
slog-stdlog = "3"
slog-term = "2"
termcolor = "0.3.3"
time = "*"
tokio = "0.1"
tokio-io = "0.1.6"
tokio-threadpool = "0.1.3"
url = "1.4"
zip = "0.2"

[dependencies.nom]
features = ["regexp"]
version = "3.2.1"

[dependencies.semver]
features = ["serde"]
version = "0.8.0"

[dependencies.slog]
features = ["max_level_trace"]
version = "2"
