[package]
authors = ["Euan Rochester <euan@rochester.me.uk>"]
name = "modpack_tool"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.2"
clap = "2.24"
env_logger = "0.5"
failure = "0.1.1"
failure_derive = "0.1.1"
futures-preview = {version="0.3.0-alpha.17",features=["nightly","async-await"]}
html5ever = "0.22.0"
http = "0.1.5"
hyper = { git = "https://github.com/hyperium/hyper"}
hyper-tls = { git = "https://github.com/hyperium/hyper-tls"}
indicatif = "0.11.0"
kuchiki = "0.7.3"
lazy_static = "1.0"
log = "*"
regex = "1.1.9"
selectors = "0.21.0"
sentry = "0.12.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha1 = "*"
slog-json = "2"
slog-stdlog = "3"
slog-term = "2"
termcolor = "0.3.3"
time = "*"
tokio = "0.2.0-alpha.1"
url = "1.4"
zip = "0.2"
console = "0.7.7"
structopt = "0.2.18"
app_dirs = "1.2.1"

[dependencies.nom]
features = ["regexp"]
version = "5.0.0"

[dependencies.semver]
features = ["serde"]
version = "0.8.0"

[dependencies.slog]
features = ["max_level_trace"]
version = "2"
